--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="app-card">
             <form class="search-form" id="search-form">
-            <input type="text" name="searchQuery" autocomplete="off" placeholder="Search location..." />
+            <input type="text" name="searchQuery" autocomplete="off" placeholder="Enter location..." />
             <button type="submit">🔍</button>
         </form>
     <div class="location"></div>
